# truck-parking

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: rl.yaml
config/scenario/: scenario_000.yaml  scenario_001.yaml  scenario_002.yaml  scenario_003.yaml  scenario_004.yaml  scenario_005.yaml  scenario_006.yaml  scenario_007.yaml  scenario_008.yaml  scenario_009.yaml  scenario_010.yaml  scenario_011.yaml  scenario_012.yaml  scenario_013.yaml  scenario_014.yaml  scenario_015.yaml  scenario_016.yaml  scenario_017.yaml  scenario_018.yaml  scenario_019.yaml  scenario_020.yaml  scenario_021.yaml  scenario_022.yaml  scenario_023.yaml  scenario_024.yaml  scenario_025.yaml  scenario_026.yaml  scenario_027.yaml  scenario_028.yaml  scenario_029.yaml  scenario_030.yaml  scenario_031.yaml  scenario_032.yaml  scenario_033.yaml  scenario_034.yaml  scenario_035.yaml  scenario_036.yaml  scenario_037.yaml  scenario_038.yaml  scenario_039.yaml  (+460 more)
docs/: algorithm.md
scripts/: generate_dataset.py  train_agent.py
src/smoke_tests/: test_planner.py  test_truck.py
src/truck_parking/common/: geometry.py  guards.py
src/truck_parking/core/: controller.py  obstacle.py  planner.py  spline.py  truck.py
src/truck_parking/rl/: db.py  env.py  epi.py  obs.py  rew.py  tfmr.py  trainer.py
